Fix block wrapping on home page for colors and clouds

--- a/themes/clouds/css-1.7.0/style.css
+++ b/themes/clouds/css-1.7.0/style.css
@@ -2350,6 +2350,7 @@ dd .deletelink {
 .DataTables_sort_wrapper {
 	position: relative;
 	margin: 0 20px;
+	white-space: normal;
 }
 
 .DataTables_sort_wrapper span {
